clusterwide-manifests/cluster-dbs.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-5-7-service
spec:
  ports:
  - port: 3306
  selector:
    app: mysql-5-7-app
  clusterIP: None
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: StatefulSet
metadata:
  name: mysql-5-7-app
spec:
  serviceName: "mysql-5-7-service"
  selector:
    matchLabels:
      app: mysql-5-7-app
  template:
    metadata:
      labels:
        app: mysql-5-7-app
    spec:
      containers:
      - image: mysql:5.7.30
        name: mysql-5-7-container
        ports:
        - containerPort: 3306
          name: mysql-port
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
        - name: mysql-5-7-cnf-volume
          mountPath: /etc/mysql
          readOnly: true
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-5-7-pv-claim
      - name: mysql-5-7-cnf-volume
        configMap:
          name: mysql-5-7-cnf
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-5-6-service
spec:
  ports:
  - port: 3306
  selector:
    app: mysql-5-6-app
  clusterIP: None
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: StatefulSet
metadata:
  name: mysql-5-6-app
spec:
  serviceName: "mysql-5-6-service"
  selector:
    matchLabels:
      app: mysql-5-6-app
  template:
    metadata:
      labels:
        app: mysql-5-6-app
    spec:
      containers:
      - image: mysql:5.6.48
        name: mysql-5-6-container
        ports:
        - containerPort: 3306
          name: mysql-port
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
        - name: mysql-5-6-cnf-volume
          mountPath: /etc/mysql
          readOnly: true
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-5-6-pv-claim
      - name: mysql-5-6-cnf-volume
        configMap:
          name: mysql-5-6-cnf
