clusterwide-manifests/multi-kafka-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: smartcerv-zookeeper-svc-1
  labels: 
    app: zookeeper-app
spec:
  ports:
  - port: 2888
    name: server
  - port: 3888
    name: leader-election
  selector:
    app: zookeeper-app-1
  clusterIP: None
---
apiVersion: v1
kind: Service
metadata:
  name: smartcerv-zookeeper-svc-2 
  labels: 
    app: zookeeper-app
spec:
  ports:
  - port: 2888
    name: server
  - port: 3888
    name: leader-election
  selector:
    app: zookeeper-app-2
  clusterIP: None
---
apiVersion: v1
kind: Service
metadata:
  name: smartcerv-zookeeper-svc-3 
  labels: 
    app: zookeeper-app
spec:
  ports:
  - port: 2888
    name: server
  - port: 3888
    name: leader-election
  selector:
    app: zookeeper-app-3
  clusterIP: None
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-client-service
  labels: 
    app: zookeeper-client-service
spec:
  ports:
  - port: 2181
    name: client
  selector:
    app: zookeeper-app
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zookeeper-app-1
spec:
  selector:
    matchLabels:
      app: zookeeper-app
  serviceName: smartcerv-zookeeper-svc-1
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: zookeeper-app
    spec:
      containers:
      - name: zookeeper-container
        imagePullPolicy: Always
        image: zookeeper:3.6.1
        ports:
        - containerPort: 2181
          name: client
        - containerPort: 2888
          name: server
        - containerPort: 3888
          name: leader-election
        readinessProbe:
          exec: 
           command:
            - sh
            - -c
            - "zookeeper-ready 2181"
          initialDelaySeconds: 10
          timeoutSeconds: 5
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - "zookeeper-ready 2181"
          initialDelaySeconds: 10
          timeoutSeconds: 5
        volumeMounts: 
        - name: zookeeper-persistent-storage
          mountPath: /var/lib/zookeeper
      volumes:
      - name: zookeeper-persistent-storage
        persistentVolumeClaim:
          claimName: zookeeper-pv-claim
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zookeeper-app-2
spec:
  selector:
    matchLabels:
      app: zookeeper-app
  serviceName: smartcerv-zookeeper-svc-2
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: zookeeper-app
    spec:
      containers:
      - name: zookeeper-container
        imagePullPolicy: Always
        image: zookeeper:3.6.1
        ports:
        - containerPort: 2181
          name: client
        - containerPort: 2888
          name: server
        - containerPort: 3888
          name: leader-election
        readinessProbe:
          exec: 
           command:
            - sh
            - -c
            - "zookeeper-ready 2181"
          initialDelaySeconds: 10
          timeoutSeconds: 5
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - "zookeeper-ready 2181"
          initialDelaySeconds: 10
          timeoutSeconds: 5
        volumeMounts: 
        - name: zookeeper-persistent-storage
          mountPath: /var/lib/zookeeper
      volumes:
      - name: zookeeper-persistent-storage
        persistentVolumeClaim:
          claimName: zookeeper-pv-claim
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zookeeper-app-3
spec:
  selector:
    matchLabels:
      app: zookeeper-app
  serviceName: smartcerv-zookeeper-svc-3
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: zookeeper-app
    spec:
      containers:
      - name: zookeeper-container
        imagePullPolicy: Always
        image: zookeeper:3.6.1
        ports:
        - containerPort: 2181
          name: client
        - containerPort: 2888
          name: server
        - containerPort: 3888
          name: leader-election
        readinessProbe:
          exec: 
           command:
            - sh
            - -c
            - "zookeeper-ready 2181"
          initialDelaySeconds: 10
          timeoutSeconds: 5
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - "zookeeper-ready 2181"
          initialDelaySeconds: 10
          timeoutSeconds: 5
        volumeMounts: 
        - name: zookeeper-persistent-storage
          mountPath: /var/lib/zookeeper
      volumes:
      - name: zookeeper-persistent-storage
        persistentVolumeClaim:
          claimName: zookeeper-pv-claim
