clusterwide-manifests/ingress-controller.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: ingress-test
spec:
  rules:
  - host: ingress-test.bluecodeltd.com
    http:
      paths:
      - path:
        backend:
          serviceName: nginx-service
          servicePort: 80
